clang/test/Lexer/string-literal-encoding.c
// RUN: %clang_cc1 -x c++ -std=c++0x -fsyntax-only -verify %s
// RUN: %clang_cc1 -x c++ -std=c++0x -fexec-charset IBM-1047 -fsyntax-only -verify %s

// This file should be encoded using ISO-8859-1, the string literals should
// contain the ISO-8859-1 encoding for the code points U+00C0 U+00E9 U+00EE
// U+00F5 U+00FC

void f() {
    wchar_t const *a = L"Айохь"; // expected-error {{illegal character encoding in string literal}}

    char16_t const *b = u"Айохь"; // expected-error {{illegal character encoding in string literal}}
    char32_t const *c = U"Айохь"; // expected-error {{illegal character encoding in string literal}}
    wchar_t const *d = LR"(Айохь)"; // expected-error {{illegal character encoding in string literal}}
    char16_t const *e = uR"(Айохь)"; // expected-error {{illegal character encoding in string literal}}
    char32_t const *f = UR"(Айохь)"; // expected-error {{illegal character encoding in string literal}}

    char const *g = "Айохь"; // expected-warning {{illegal character encoding in string literal}}
    char const *h = u8"Айохь"; // expected-error {{illegal character encoding in string literal}}
    char const *i = R"(Айохь)"; // expected-warning {{illegal character encoding in string literal}}
}

void g() {
    wchar_t const *a = L"foo Айохь"; // expected-error {{illegal character encoding in string literal}}

    char16_t const *b = u"foo Айохь"; // expected-error {{illegal character encoding in string literal}}
    char32_t const *c = U"foo Айохь"; // expected-error {{illegal character encoding in string literal}}
    wchar_t const *d = LR"(foo Айохь)"; // expected-error {{illegal character encoding in string literal}}
    char16_t const *e = uR"(foo Айохь)"; // expected-error {{illegal character encoding in string literal}}
    char32_t const *f = UR"(foo Айохь)"; // expected-error {{illegal character encoding in string literal}}

    char const *g = "foo Айохь"; // expected-warning {{illegal character encoding in string literal}}
    char const *h = u8"foo Айохь"; // expected-error {{illegal character encoding in string literal}}
    char const *i = R"(foo Айохь)"; // expected-warning {{illegal character encoding in string literal}}
}
